--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
-  }
+  },
+  "homepage": "file:///D:/Mis%20Creaciones/To-Dos/build/"
 }
